infra/gitops/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: group-1-dev
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: kbazaar-api
          image: ghcr.io/kbtg-kampus-classnest-se-java/workshop-group-1:60cd0aacc23a56e40afb5f2a715f9fd0c4353c35
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
